# confgraph

./: .gitignore  CHANGELOG.md  INTERFACE.md  README.md  main.py  pyproject.toml
confgraph/: change_ir.py  cli.py  loader.py  tombstones.py
docs/: ADDING_NEW_OS_SUPPORT.md  ARCHITECTURE.md  CLI_USAGE.md  EOS_PARSER_SUPPORT.md  IOSXR_PARSER_SUPPORT.md  IOS_PARSER_SUPPORT.md  JUNOS_PARSER_SUPPORT.md  NXOS_PARSER_SUPPORT.md  PANOS_PARSER_SUPPORT.md  PARSER_SUPPORT_MATRIX.md  supported_os_types.md
examples/: eos.html  ios.html  ios_xe.html  ios_xr.html  nxos.html
samples/: complex_router.ios  eos.html  eos.txt  ios.html  ios.txt  ios01.html  ios01.txt  ios_xe.html  ios_xe.txt  ios_xr.html  ios_xr.txt  iosxr_test.cfg  junos_test.cfg  junos_test.html  nxos.html  nxos.txt  panos_sample.html  panos_sample.xml
tests/: test_ccr0030_parser_wrong_values.py  test_ccr0031_syntax_variants.py  test_ccr0032_nested_traversal.py  test_ccr0033_resolver_null0_vrf_routemap.py  test_ccr0034_panos_panorama_layout.py  test_ccr0035_panos_routing_surface.py  test_ccr0036_junos_parser_gaps.py  test_ccr0037_topology_discovery_and_parallel_bgp.py  test_ccr0038_cross_vendor_coverage.py  test_ccr0044_eos_parser_gaps.py  test_ccr0046_iosxr_nested_blocks.py  test_ccr0059_eos_device_capture.py  test_ccr0061_eos_bestpath_tie_break.py  test_ccr0062_eos_line_mgmt.py  test_ccr0067_nxos_eigrp_af_descent.py  test_ccr0067_nxos_isis_af_descent.py  test_ccr0076_nxos_port_type_edge_portfast.py  test_ccr0077_nxos_neighbor_af_descent.py  test_ccr0078_bgp_default_originate.py  test_ccr0078_validator_do.py  test_ccr0081_nxos_af_no_network.py  test_ccr0085_nxos_pim_multicast.py  test_change_ir.py  test_change_ir_bgp_scalars.py  test_change_ir_native_db1_b1.py  test_change_ir_native_db1_b2.py  test_change_ir_native_db1_b3.py  test_change_ir_native_db2.py  (+43 more)
(+67 files in other folders)
